--- a/public/bower.json
+++ b/public/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "foundation": "^5.5.3",
-    "jquery": "^2.2.1"
+    "jquery": "^2.2.1",
+    "jquery-ui": "^1.11.4"
   }
 }
