--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.15.0",
     "connect-multiparty": "^2.0.0",
     "express": "^4.13.4",
+    "formidable": "^1.0.17",
     "fs-extra": "^0.26.5",
     "glob": "^7.0.3",
     "http": "0.0.0",
