--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "glob": "^7.0.3",
     "http": "0.0.0",
     "jade": "^1.11.0",
+    "moment": "^2.14.1",
     "path": "^0.12.7",
     "serve-favicon": "^2.3.0",
+    "slugg": "^1.0.0",
     "socket.io": "^1.4.5",
     "underscore": "^1.8.3",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "util": "^0.10.3",
+    "woods-parsedown": "git://github.com/louis-ev/woods-parsedown.git#master"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
